objects/Survey_Notification_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>used in email bath process to send Survey notifications</description>
    <fields>
        <fullName>APAC__c</fullName>
        <label>APAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Always_Copy__c</fullName>
        <label>Always Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA__c</fullName>
        <label>EMEA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LATAM__c</fullName>
        <label>LATAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>North_America__c</fullName>
        <label>North America</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Survey Notification Settings</label>
</CustomObject>